<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TarjetaPedido"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/card_margin_horizontal"
    android:layout_marginVertical="@dimen/card_margin_vertical"
    android:orientation="vertical">

    <!-- Top Row: Order ID, Time & Status Badge -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvOrderId"
                style="@style/TituloPequeno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Pedido #0231" />

            <TextView
                android:id="@+id/tvOrderTime"
                style="@style/SubtituloAtenuado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_2xs"
                tools:text="Hace 3 min · Mesa 4" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvStatusBadge"
            style="@style/InsigniaEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_status_cocina"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:text="@string/estado_cocina"
            android:textColor="@color/wait_600" />
    </RelativeLayout>

    <!-- Items Summary -->
    <TextView
        android:id="@+id/tvOrderItems"
        style="@style/TextoCuerpo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="2dp"
        tools:text="1/4 pollo frito, 1/2 pollo a la brasa, 2× gaseosa" />

    <!-- Type and Total Row -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTypeIcon"
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:contentDescription="@string/recibo_etiqueta_tipo"
                android:src="@drawable/ic_type_table" />

            <TextView
                android:id="@+id/tvOrderType"
                style="@style/TextoSubtitulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:fontFamily="sans-serif-bold"
                tools:text="Para mesa" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvOrderTotal"
            style="@style/PrecioPequeno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            tools:text="Bs. 41.40" />
    </RelativeLayout>

    <!-- Action Buttons Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_m"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnViewDetail"
            style="@style/BotonContornoPequeno"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height_small"
            android:layout_marginEnd="@dimen/spacing_s"
            android:layout_weight="1"
            android:text="@string/btn_ver_detalle" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPrimaryAction"
            style="@style/BotonPrimarioPequeno"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height_small"
            android:layout_weight="1"
            android:text="@string/btn_marcar_listo" />
    </LinearLayout>

</LinearLayout>